solve warning console.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.open-in-view=false
+# https://code.danielfrak.com/spring-boot-best-practice-disable-osiv-to-start-receiving-lazyinitializationexception-warnings-again/
+# logging.level.web=DEBUG
+# logging.level.org.springframework.web=DEBUG
+# logging.level.org.hibernate=ERROR
