add books to website

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.jpa.open-in-view=false
 # logging.level.web=DEBUG
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.hibernate=ERROR
+
+cors.allowed.origins=*
+cors.allowed.methods=GET,POST,PUT,DELETE
+cors.resolvedMethods=
+cors.allowedHeaders=*
+cors.exposedHeaders=
+cors.allowCredentials=
+cors.maxAge=
