--- a/pom.xml
+++ b/pom.xml
@@ -111,18 +111,21 @@
 						<exclude>dj/personal/website/certificate/**/*</exclude>
 						<exclude>dj/personal/website/project/**/*</exclude>
 						<exclude>dj/personal/website/translation/**/*</exclude>
+						<exclude>dj/personal/website/book/CloseableUrlConnection.class</exclude>
 					</excludes>
 				</configuration>
 				<executions>
 					<execution>
-						<id>default-prepare-agent</id>
+						<id>pre-unit-test</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
 					<execution>
-						<id>check</id>
+						<id>post-unit-test</id>
+						<phase>test</phase>
 						<goals>
+							<goal>report</goal>
 							<goal>check</goal>
 						</goals>
 						<configuration>
