--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.datasource.data=classpath:*-data.sql
 
 book.cover.url=http://80.201.59.168:10000/book-cover/
 book.cover.timeout=5000
+blogpost.downloader.url=http://80.201.59.168:10001/articles/
+blogpost.timeout=20000
