--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -14,5 +14,7 @@ cors.maxAge=
 
 spring.datasource.data=classpath:*-data.sql
 
-book.cover.url=http://109.132.239.183:10000/book-cover/
+book.cover.url=http://80.201.59.168:10000/book-cover/
 book.cover.timeout=1
+blogpost.downloader.url=http://80.201.59.168:10001/articles/
+blogpost.timeout=1
