--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ cors.exposedHeaders=
 cors.allowCredentials=
 cors.maxAge=
 
-spring.datasource.data=classpath:*-data.sql
+#spring.datasource.data=classpath:*-data.sql
 
 book.cover.url=http://80.201.59.168:10000/book-cover/
 book.cover.timeout=5000
