--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,7 +12,7 @@ cors.exposedHeaders=
 cors.allowCredentials=
 cors.maxAge=
 
-spring.datasource.data=classpath:*-data.sql
+#spring.datasource.data=classpath:*-data.sql
 
 book.cover.url=http://80.201.59.168:10000/book-cover/
 book.cover.timeout=1
