--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ cors.exposedHeaders=
 cors.allowCredentials=
 cors.maxAge=
 
-book.cover.url=http://80.201.59.168:10000/book-cover/
-blogpost.downloader.url=http://80.201.59.168:10001/articles/
+book.cover.url=http://www.dieterjordens.be:10000/book-cover/
+blogpost.downloader.url=http://www.dieterjordens.be:10001/articles/
