--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.0-SNAPSHOT</version>
+		<version>2.3.4.RELEASE</version>
 		<relativePath/>
 	</parent>
 	<groupId>dj.personal</groupId>
@@ -15,7 +15,7 @@
 	<description>Backend for my website</description>
 
 	<properties>
-		<java.version>14</java.version>
+		<java.version>15</java.version>
 		<rest.assured.version>4.2.0</rest.assured.version>
 	</properties>
 
