--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     ports:
       - 3306:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=user
-      - MYSQL_PASSWORD=password
-      - MYSQL_DATABASE=db
+      - MYSQL_ROOT_PASSWORD=secret
+      - MYSQL_DATABASE=data
+      - MYSQL_USER=dieter
+      - MYSQL_PASSWORD=secret
     volumes:
       - mysql_data_container:/var/lib/mysql
     networks:
