--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ cors.exposedHeaders=
 cors.allowCredentials=
 cors.maxAge=
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysqldb:3306/db
-spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysqldb:3306/data
+spring.datasource.username=dieter
+spring.datasource.password=secret
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
