--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ cors.exposedHeaders=
 cors.allowCredentials=
 cors.maxAge=
 
-spring.datasource.url=jdbc:mysql://0.0.0.0:3306/data
+spring.datasource.url=jdbc:mysql://mysqldb:3306/data
 spring.datasource.username=dieter
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
