--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ cors.allowCredentials=
 cors.maxAge=
 
 spring.datasource.url=jdbc:mysql://mysqldb:3306/data
-spring.datasource.username=${MYSQL_USER:dieter}
-spring.datasource.password=${MYSQL_PASSWORD:secret}
+spring.datasource.username=${MYSQL_USER:username}
+spring.datasource.password=${MYSQL_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
