--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=secret
       - MYSQL_DATABASE=data
-      - MYSQL_USER=dieter
-      - MYSQL_PASSWORD=secret
+      - MYSQL_USER=username
+      - MYSQL_PASSWORD=password
     volumes:
       - mysql_data_container:/var/lib/mysql
     networks:
