add swagger to api

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<version>${lombok.version}</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
