--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,5 @@
 spring.jpa.open-in-view=false
 
-cors.allowed.origins=*
-cors.allowed.methods=GET,POST,PUT,DELETE
-cors.resolvedMethods=
-cors.allowedHeaders=*
-cors.exposedHeaders=
-cors.allowCredentials=
-cors.maxAge=
-
 spring.datasource.url=jdbc:mysql://mysqldb:3306/data
 spring.datasource.username=${MYSQL_USER:username}
 spring.datasource.password=${MYSQL_PASSWORD:password}
@@ -16,3 +8,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=10000
+springdoc.api-docs.path=/api-docs
